Fix outwork half-width display on mobile #239

--- a/sitemedia/scss/base/page/_collection.scss
+++ b/sitemedia/scss/base/page/_collection.scss
@@ -162,7 +162,9 @@
 }
 
 .item__body {
-  @include grid-column(2);
+  @include grid-media($large-medium-viewport-grid) {
+    @include grid-column(2);
+  }
 
   .collection--condensed & {
     width: 100%;
